2008-12-19  Nikolas Coukouma <atrus@zmanda.com>, Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c, device-src/s3.c, device-src/s3.h:
	  Reset read and write when retrying a failed request

2008-12-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c (holding_get_file_chunks): Set fullpaths to 1.

2008-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Don't free 'rc'.

2008-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgtar.8.xml: Improve documentation of regex.

2008-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h (anonymous_value): New prototype.
	* common-src/conffile.c (anonymous_value): New function.
	* common-src/conffile.c: Use anonymous_value.
	* server-src/diskfile.c: Use anonymous_value.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Fix infinite loop.
	* perl/Amanda/Application/Zfs.pm: Fix for freebsd.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Run script only if todo is set.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amfetchdump.pl: chdir() before rmtree().

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/pipespawn.c: Remove bogus g_debug().

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amarchiver.pl: chdir() before rmtree().
	* installcheck/amcheckdump.pl: Add reason to BAIL_OUT.
	* installcheck/amdevcheck.pl: Add reason to BAIL_OUT.

2008-12-07  Satya Ganga <gsat@zmanda.com>
	* changer-src/chg-lib.sh.in: Remove dependency on ggrep and use mtx
	  offline command instead of "eject" which is not supported on solaris.

2008-12-17 Dan Locks <dwlocks@zmanda.com>
	* config/amanda/changer.m4: update AC_CHECK_HEADERS to get rid of
	  "present but cannot be compiled" warning during debian packaging.

2008-12-17 Dan Locks <dwlocks@zmanda.com>