@@ -1,3 +1,6 @@
+2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/reporter.c: Fix reporting of FLUSH.
+
 2008-12-19  Nikolas Coukouma <atrus@zmanda.com>, Dustin J. Mitchell <dustin@zmanda.com>
 	* device-src/s3-device.c, device-src/s3.c, device-src/s3.h:
 	  Reset read and write when retrying a failed request
